[package]
name = "actix-web-server"
version = "0.1.0"
authors = ["Melonai <einebeere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"
json = "0.12.4"
env_logger = "0.7.1"
aes = "0.3.2"
