[package]
name = "shorest"
version = "0.2.0"
authors = ["Melonai <einebeere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.106"
serde_derive = "1.0.106"
env_logger = "0.7.1"
dotenv = "0.15.0"
crc32fast = "1.2.0"
base64 = "0.12.0"
url = "2.1.1"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
actix-files = "0.2.1"


