[package]
name = "shorest"
version = "0.3.0"
authors = ["Melonai <einebeere@gmail.com>"]
edition = "2018"
homepage = "https://sho.rest/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
actix-rt = "1.1"
serde = "1.0"
serde_derive = "1.0"
env_logger = "0.8.2"
dotenv = "0.15.0"
crc32fast = "1.2.0"
base64 = "0.13.0"
url = "2.2.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
actix-files = "0.5.0"
log = "0.4"
openssl = "*"

